--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,11 +4,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="{{ site.theme_color }}">
 
-  <link rel="stylesheet" href="{{'/assets/main.css' | prepend: site.baseurl}}">
+  <link rel="stylesheet" href="{{'/assets/main.css' | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="shortcut icon" href="{{'/favicon.ico' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{'/icon.png' | relative_url }}">
 
   {% seo %}
 </head>
