--- a/assets/main.scss
+++ b/assets/main.scss
@@ -32,7 +32,7 @@ body {
 }
 
 .friend-jumbotron {
-  background-image: url('/assets/garythink.svg');
+  background-image: url('{{ '/assets/garythink.svg' | relative_url }}');
   background-position: right -1em bottom -1em;
   background-size: 30%;
   background-repeat: no-repeat;
