fix relative url in header link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center align-items-center my-5">
   <div class="col-6 col-sm-2">
-    <a href="{{site.url}}">
+    <a href="{{'/' | relative_url}}">
       <img src="{{'/assets/fccdiscord.svg' | relative_url}}" class="img-fluid rounded-circle" alt="logo">
     </a>
   </div>
