fix rendering of page header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,12 @@
-<div class="row justify-content-center align-items-center my-5">
-  <div class="col-6 col-sm-2">
-    <a href="{{'/' | relative_url}}">
-      <img src="{{'/assets/fccdiscord.svg' | relative_url}}" class="img-fluid rounded-circle" alt="logo">
-    </a>
-  </div>
-  <div class="col-12 col-sm-auto mw-100">
-    <h1 class="site-title">{{ site.title }}</h1>
+<div class="container">
+  <div class="row justify-content-center align-items-center my-5">
+    <div class="col-6 col-sm-2">
+      <a href="{{'/' | relative_url}}">
+        <img src="{{'/assets/fccdiscord.svg' | relative_url}}" class="img-fluid rounded-circle" alt="logo">
+      </a>
+    </div>
+    <div class="col-12 col-sm-auto mw-100">
+      <h1 class="site-title">{{ site.title }}</h1>
+    </div>
   </div>
 </div>
